Fix fonts on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ a {
 
 h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
-  font-family: "Display Playfair"; }
+  font-family: "Playfair Display"; }
 
 .text-black {
   color: #000 !important; }
